import "Dependency.proto";

option java_outer_classname="OpenStreamCommandProtocol";
package Alachisoft.NCache.Common.Protobuf;
message OpenStreamCommand 
{
	optional string key = 1;
	optional int32 streamMode = 2;
	optional string group = 3;
	optional string subGroup = 4;
	optional int64 absoluteExpiration = 5;
	optional int64 slidingExpiration = 6;
	optional int32 priority = 7;
	optional int64 requestId = 8;
	optional Dependency dependency = 9;
}